fix on iphone

--- a/app/assets/stylesheets/components/_home_card.scss
+++ b/app/assets/stylesheets/components/_home_card.scss
@@ -81,11 +81,16 @@
   bottom:-100vh;
   width:100%;
   left:0;
-  animation-name:slideup;
-  animation-delay:0.1s;
-  animation-duration:0.8s;
-  animation-fill-mode:forwards;
-  animation-timing-function:ease;
+  -webkit-animation-name: slideup;
+  animation-name: slideup;
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
+  -webkit-animation-duration: 0.8s;
+  animation-duration: 0.8s;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-timing-function: ease;
+  animation-timing-function: ease;
 }
 
 @keyframes slideup {
